--- a/src/app/caixas/components/lista-caixas/lista-caixas.component.html
+++ b/src/app/caixas/components/lista-caixas/lista-caixas.component.html
@@ -13,7 +13,7 @@
   <div *ngIf="caixas$ | async as caixas; else loading">
     <table mat-table [dataSource]="caixas" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <th mat-header-cell *matHeaderCellDef>Id</th>
         <td mat-cell *matCellDef="let caixa">{{ caixa.id }}</td>
       </ng-container>
 
