--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -13,6 +13,7 @@
 <mat-drawer-container class="container" autosize>
   <mat-drawer #drawer opened class="example-sidenav" mode="side">
     <mat-nav-list>
+      <mat-list-item class="menu-item"><a matLine routerLink="/usuarios">Usuários</a></mat-list-item>
       <mat-list-item class="menu-item"><a matLine routerLink="/pessoas">Pessoas</a></mat-list-item>
     </mat-nav-list>
   </mat-drawer>
